# libhns

./: AUTHORS  CHANGES.0  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE.md  Makefile.Watcom  Makefile.am  Makefile.dj  Makefile.inc  Makefile.m32  Makefile.msvc  Makefile.netware  NEWS  README.hns  README.md  README.msvc  RELEASE-NOTES  RELEASE-PROCEDURE.md  SECURITY.md  TODO  acinclude.m4  acountry.1  adig.c  ahost.1  ahost.c  appveyor.yml  ares.h  ares__close_sockets.c  ares__get_hostent.c  ares__timeval.c  ares_addr.c  ares_addr.h  ares_android.c  ares_android.h  ares_base32.c  ares_base32.h  ares_blake2b-impl.h  ares_blake2b.c  ares_blake2b.h  (+194 more)
m4/: cares-confopts.m4  hns-compilers.m4  hns-functions.m4  hns-override.m4  hns-reentrant.m4
secp256k1/: configure.ac  ecdsa.h  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_const.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_gen_impl.h  ecmult_impl.h  ecmult_static_context.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_asm_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  group.h  group_impl.h  hash.h  hash_impl.h  num.h  num_impl.h  scalar.h  scalar_4x64.h  scalar_4x64_impl.h  scalar_8x32.h  scalar_8x32_impl.h  scalar_impl.h  scalar_low.h  scalar_low_impl.h  scratch.h  scratch_impl.h  secp256k1.c  secp256k1.h  secp256k1_ecdh.h  secp256k1_ecdh_impl.h  (+3 more)
secp256k1/asm/: field_10x26_arm.s
test/: CMakeLists.txt  Makefile.am  Makefile.inc  Makefile.m32  Makefile.msvc  README.md  ares-fuzz.c  ares-test-fuzz.c  ares-test-init.cc  ares-test-internal.cc  ares-test-live.cc  ares-test-misc.cc  ares-test-mock.cc  ares-test-parse-a.cc  ares-test-parse-openpgpkey.cc  ares-test-parse-ptr.cc  ares-test-parse-smimea.cc  ares-test-parse-srv.cc  ares-test-parse-sshfp.cc  ares-test-parse-tlsa.cc  ares-test-parse.cc  configure.ac  dns-dump.cc  dns-proto-test.cc  dns-proto.cc  dns-proto.h  fuzzcheck.sh  hns-test-fuzz-name.c  hns-test-main.cc  hns-test-ns.cc  hns-test-parse-aaaa.cc  hns-test-parse-mx.cc  hns-test-parse-naptr.cc  hns-test-parse-ns.cc  hns-test-parse-soa.cc  hns-test-parse-sshfp.cc  hns-test-parse-tlsa.cc  hns-test-parse-txt.cc  hns-test.cc  hns-test.h
test/gmock-1.8.0/gmock/: gmock.h
travis/: build.sh  distcheck.sh  test.sh
vc/: vc6aws.dsw
vc/ahost/: vc6ahost.dsp
vc/hcountry/: vc6hcountry.dsp
vc/hdig/: vc6hdig.dsp
vc/hns/: vc6hns.dsp  vc6hns.dsw
